fix total style

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <select id="select1"></select>
             <select id="select2"></select>
             <button class="button" onclick="GetConversion()">Конвертировать</button>
-            <div class="total">
+            <div>
                 <p>Результат конвертации:</p>
                 <p id="total_amount">10000</p>
             </div>
